2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	* src/MainWindow.py
	Fixed outline treeview bugs and simplified its code.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Use a 1-pixel-wide border line for selection box.

2008-04-11 Martin Schaaf <mascha@ma-scha.de>

	* src/MainWindow.py
	Fix exception on maximizing loaded map by calling maximize on
	the gtk window not on the labyrinth window object.

2008-04-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix bug and issue 109.

2008-04-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/MMapArea.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	Use Glade for the MapWindow. Added general alignment widgets.

2008-04-09 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Move multiple thoughts (fix issue 93). Introduced escape key
	deselecting all thoughts.

2008-04-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/MMapArea.py
	* src/Browser.py
	Save line/bezier state.

2008-04-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/UndoManager.py
	* src/MainWindow.py
	* src/MMapArea.py
	* src/ImageThought.py
	Add undo/redo to context sensitive menu. Use an image item for
	change image.

2008-04-07 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/DrawingThought.py
	* src/BaseThought.py
	* src/MMapArea.py
	* src/ImageThought.py
	* src/TextThought.py
	Started working on popup menus. Added image changing through
	popup menu.

2008-04-06 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix bug and update model on thought deletion.

2008-04-06 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/BaseThought.py
	* src/MMapArea.py
	* data/labyrinth-ui.xml
	Add thought outline (activate throught view -> outline) for
	a11y.
